# avro-no-std

./: Cargo.toml  README.md
src/: avro-validation.rs  avro_tests.rs  avro_validation.rs  lib.rs
