[package]
name = "ish-mrc-avro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apache-avro = { git = "https://github.com/apache/avro", features = ["snappy"] }
thiserror = "1"
sha2 = "0.10.2"
rayon = "1.5"
sp-std = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"}


[dev-dependencies]
proptest = "1.0"
serde = {version = "1.0.136", features = ["derive"], default-features = false}
sp-runtime = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18"}
sp-std = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18"}

[features]
default = ['std']
std = [
	'sp-std/std',
	'sp-runtime/std',
]